# kitten

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  conanfile.py
include/kitten/: applicative.h  functor.h  kitten.h  monad.h  monoid.h  multifunctor.h
include/kitten/detail/: traits.h
include/kitten/detail/deriving/from_monad/: derive_applicative.h  derive_functor.h
include/kitten/detail/ranges/: algorithm.h
include/kitten/instances/: either.h  function.h  io.h  optional.h  sequence_container.h  variant.h
include/kitten/ranges/: algorithm.h
test_package/: CMakeLists.txt  conanfile.py  main.cpp
tests/: CMakeLists.txt  either_test.cpp  function_test.cpp  io_test.cpp  main.cpp  optional_test.cpp  sequence_container_test.cpp  utils.h  variant_test.cpp
